Added github link in writeup

--- a/writeup.Rmd
+++ b/writeup.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(echo = TRUE,eval=FALSE)
 
 MIDI files are audio files which allow listeners to play separate instrumental parts of a piece. Playing these separate instrumental parts simultaneously from different devices is a digital way of recreating a live performance. For this applied data project, I attempt to use ICA to separate three instrumental parts of a trio: clarinet, bassoon, and oboe. I first assigned an instrumental part to each of my roommates to play on their computer (after arranging them in a typical chamber group configuration). We played our assigned part on our computers simultaneously (in-sync once and out-of-sync once) while each recording the resulting audio on our phones. Taking these three recordings, I cropped and aligned them to be the same length. I apply both a standard fastICA and a more complex 3-way group ICA to the combined recordings in hopes of separating out the three distinct instrument components.
 
-Runnable code for this project can be found at 
+Runnable code for this project can be found at https://github.com/hungf8342/mv_audio_processing in the code.Rmd file.
 
 \subsection{Musical Background}
 As humans, we can differentiate between different instruments due to certain properties of these instruments. Some instruments, like the bassoon and oboe for example, have different ranges in frequencies that they can play. For instruments which have overlapping ranges, a characteristic called timbre gives them a distinctive sound. Although difficult to quantify or describe, one auditory aspect of timbre is the overtones that accompany the base note (in a sense, secondary frequencies accompanying the main frequency). This dependence of timbre on frequency combinations motivates a method which separates components of signals based on combinations of certain frequencies. 
